--- a/lisk-dex-electron/src/App.css
+++ b/lisk-dex-electron/src/App.css
@@ -1,8 +1,13 @@
+body {
+  background-color: black;
+  color: white;
+}
+
 .container {
   display: grid;
   grid-template-columns: 20% 20% 40% 20%;
   grid-template-rows: 310px 310px;
-  border: 1px solid black;
+  border: 1px solid white;
   margin: 10px;
 }
 
@@ -18,38 +23,38 @@
 .market-name-and-stats {
   grid-column: 4;
   grid-row: 1/3;
-  border: 1px solid black;
+  border: 1px solid white;
 }
 
 .buy-panel {
   grid-column: 1;
   grid-row: 1 / 2;
-  border: 1px solid black;
+  border: 1px solid white;
 }
 .sell-panel {
   grid-column: 1;
   grid-row: 2 / 3;
-  border: 1px solid black;
+  border: 1px solid white;
 }
 
 .sell-orders {
   grid-column: 2;
   grid-row: 1 / 2;
-  border: 1px solid black;
+  border: 1px solid white;
 }
 .buy-orders {
   grid-column: 2;
   grid-row: 2 / 3;
-  border: 1px solid black;
+  border: 1px solid white;
 }
 
 .depth-chart {
   grid-column: 3;
   grid-row: 1 / 2;
-  border: 1px solid black;
+  border: 1px solid white;
 }
 .your-orders {
   grid-column: 3;
   grid-row: 2 / 3;
-  border: 1px solid black;
+  border: 1px solid white;
 }
