--- a/lisk-dex-electron/src/Orderbook.css
+++ b/lisk-dex-electron/src/Orderbook.css
@@ -3,6 +3,7 @@
     align-items: flex-start;
     flex-direction: column-reverse;
     height: 100%;
+    overflow: scroll;
 }
 
 .bidOrderList {
@@ -10,4 +11,5 @@
     align-items: flex-start;
     flex-direction: column;
     height: 100%;
+    overflow: scroll;
 }
