--- a/lisk-dex-electron/src/App.css
+++ b/lisk-dex-electron/src/App.css
@@ -38,15 +38,25 @@ body {
 }
 
 .sell-orders {
-  grid-column: 2;
-  grid-row: 1 / 2;
+  height: 290px;
   background-color: #1a1c1c;
 }
 .buy-orders {
-  grid-column: 2;
-  grid-row: 2 / 3;
+  height: 290px;
   background-color: #1a1c1c;
-  border-bottom: 1px dashed black;
+}
+.price-display {
+  height: 40px;
+  background-color: #212424;
+  line-height: 40px;
+  font-size: 18px;
+  padding-left: 5px;
+  font-weight: bold;
+  color: rgb(31, 150, 31);
+}
+.orderbook-container {
+  grid-column: 2;
+  grid-row: 1 / 3;
 }
 
 .depth-chart {
