--- a/lisk-dex-electron/src/App.css
+++ b/lisk-dex-electron/src/App.css
@@ -77,4 +77,5 @@ body {
   background-color: rgb(46, 46, 126);
   color: white;
   border: 1px solid grey;
+  font-family: 'Courier New', Courier, monospace;
 }
