--- a/lisk-dex-electron/src/PlaceOrder.css
+++ b/lisk-dex-electron/src/PlaceOrder.css
@@ -23,3 +23,17 @@
     font-family: 'Courier New', Courier, monospace;
     outline-color: rgb(194, 194, 194);
 }
+
+.market-limit-buttons {
+    font-size: 14px;
+    background-color: rgb(45, 46, 56);
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    outline-color: transparent;
+    margin-bottom: 15px;
+}
+
+.market-limit-buttons:disabled {
+    background-color: rgb(84, 91, 175);
+}
+
