--- a/lisk-dex-electron/src/SignInModal.css
+++ b/lisk-dex-electron/src/SignInModal.css
@@ -1,13 +1,15 @@
 #sign-in-modal {
     position: absolute;
     z-index: 2;
-    top: 150px;
+    top: 100px;
     left: 25%;
     border: 2px solid rgb(69, 69, 179);
     width: 50%;
     box-shadow: 10px 10px 5px black;
     padding: 45px;
     background-color: rgb(27, 27, 27);
+    overflow: scroll;
+    height: 400px;
 }
 
 #sign-in-textarea {
@@ -16,6 +18,6 @@
     background-color: rgb(36, 35, 35);
     color: white;
     font-family: 'Courier New', Courier, monospace;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-bottom: 8px;
 }
