--- a/lisk-dex-electron/src/App.css
+++ b/lisk-dex-electron/src/App.css
@@ -1,22 +1,24 @@
-body {
-  background-color: black;
-  color: white;
+#root {
+  height: 100%;
+  width: 100%;
 }
 
 .container {
   display: grid;
+  height: calc(100% - 50px);
   grid-template-columns: 20% 20% 45% 15%;
-  grid-template-rows: 310px 310px;
-  margin: 10px;
+  grid-template-rows: 50% 50%;
+  margin: 0 10px 0 10px;
 }
 
 .top-bar {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  height: 50px;
   width: 95%;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 10px;
 }
 
 .market-name-and-stats {
@@ -27,26 +29,24 @@ body {
 
 .buy-panel {
   grid-column: 1;
-  grid-row: 1 / 2;
+  grid-row: 2 / 3;
   background-color: #1a1c1c;
   border-bottom: 1px dashed black;
 }
+
 .sell-panel {
   grid-column: 1;
-  grid-row: 2 / 3;
+  grid-row: 1 / 2;
   background-color: #1a1c1c;
 }
 
 .sell-orders {
-  height: 290px;
   background-color: #15191a;
 }
 .buy-orders {
-  height: 290px;
   background-color: #15191a;
 }
 .price-display {
-  height: 40px;
   background-color: #212424;
   line-height: 40px;
   font-size: 18px;
@@ -55,6 +55,8 @@ body {
   color: rgb(31, 150, 31);
 }
 .orderbook-container {
+  display: grid;
+  grid-template-rows: calc(50% - 20px) 40px calc(50% - 20px);
   grid-column: 2;
   grid-row: 1 / 3;
 }
@@ -63,19 +65,76 @@ body {
   grid-column: 3;
   grid-row: 1 / 2;
 }
+
 .your-orders {
+  display: grid;
+  grid-template-rows: 40px;
   grid-column: 3;
   grid-row: 2 / 3;
   background-color: #131414;
 }
 
-.sign-in-button {
-  font-size: 18px;
-  padding: 3px;
-  padding-left: 5px;
-  padding-right: 5px;
-  background-color: rgb(46, 46, 126);
-  color: white;
-  border: 1px solid grey;
-  font-family: 'Courier New', Courier, monospace;
+.modal-background {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.6;
+  background: #000000;
+}
+
+.modal-foreground {
+  position: absolute;
+  z-index: 3;
+  opacity: 1;
+  border: 1px solid #999999;
+}
+
+.button-primary {
+  cursor: pointer;
+  font-size: 20px;
+  color: #FFFFFF;
+  border: 0;
+  padding: 5px 15px 5px 15px;
+  outline: none;
+  background: #008800;
+}
+
+.button-secondary {
+  cursor: pointer;
+  font-size: 20px;
+  color: #FFFFFF;
+  border: 0;
+  padding: 5px 15px 5px 15px;
+  outline: none;
+  background: #555555;
+}
+
+.tab-button {
+  cursor: pointer;
+  font-size: 20px;
+  color: #000000;
+  border: 0;
+  padding: 5px 15px 5px 15px;
+  outline: none;
+  background: #999999;
+}
+
+.tab-button:disabled {
+  cursor: default;
+  font-size: 20px;
+  color: #000000;
+  border: 0;
+  padding: 5px 15px 5px 15px;
+  outline: none;
+  background: #DDDDDD;
+}
+
+.error-message {
+  font-size: 14px;
+  margin-top: 4px;
+  margin-bottom: 2px;
+  color: #CC0000;
 }
