--- a/lisk-dex-electron/src/Notification.css
+++ b/lisk-dex-electron/src/Notification.css
@@ -1,32 +1,33 @@
 @keyframes appear {
   from {
     opacity: 0;
-    top: 25%;
+    top: -70px;
   }
   to {
-    top: 5px;
-    opacity: .8;
+    opacity: .9;
+    top: 4px;
   }
 }
 
 @keyframes disappear {
   from {
-    opacity: .8;
+    opacity: .9;
+    top: 4px;
   }
   to {
     opacity: 0;
+    top: -70px;
   }
 }
 
 .notification-container {
   position: absolute;
-  top: 5px;
+  top: 4px;
   color: #000000;
   text-align: center;
   left: 25%;
   width: 50%;
   padding: 10px;
-  opacity: 0.8;
   border-radius: 10px;
   background: #FFFFFF;
 }
@@ -34,11 +35,18 @@
 .notification-container.active {
   animation-name: appear;
   animation-duration: 1s;
-  opacity: 0.8;
+  top: 4px;
+  opacity: .9;
 }
 
 .notification-container.inactive {
   animation-name: disappear;
   animation-duration: 1s;
+  top: -70px;
   opacity: 0;
+}
+
+.notification-container.error {
+  color: #CC0000;
+  border: 2px solid #CC0000;
 }
