--- a/lisk-dex-electron/src/App.css
+++ b/lisk-dex-electron/src/App.css
@@ -50,15 +50,15 @@
 }
 .price-display {
   background-color: #212424;
-  line-height: 40px;
-  font-size: 18px;
+  line-height: 50px;
+  font-size: 22px;
   padding-left: 5px;
   font-weight: bold;
-  color: rgb(31, 150, 31);
+  color: #dd0000;
 }
 .orderbook-container {
   display: grid;
-  grid-template-rows: calc(50% - 20px) 40px calc(50% - 20px);
+  grid-template-rows: calc(50% - 25px) 50px calc(50% - 25px);
   grid-column: 2;
   grid-row: 1 / 3;
 }
@@ -131,14 +131,14 @@
   border: 0;
   padding: 5px 15px 5px 15px;
   outline: none;
-  background: #DDDDDD;
+  background: #dddddd;
 }
 
 .error-message {
   font-size: 14px;
   margin-top: 4px;
   margin-bottom: 2px;
-  color: #CC0000;
+  color: #cc0000;
 }
 
 .lds-dual-ring {
