--- a/lisk-dex-electron/src/App.css
+++ b/lisk-dex-electron/src/App.css
@@ -23,7 +23,7 @@
 
 .market-name-and-stats {
   grid-column: 4;
-  grid-row: 1/3;
+  grid-row: 1 / 3;
   background-color: #0d0e0e;
 }
 
@@ -165,5 +165,59 @@
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .container {
+    height: 1400px;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 16% 20% 22% 22% 20%;
+  }
+
+  .your-order-entry {
+    height: 50px;
+  }
+
+  .sign-in-state-address {
+    display: none;
+  }
+
+  .modal-background {
+    height: 1400px;
+  }
+
+  .depth-chart {
+    grid-column: 1 / 3;
+    grid-row: 2;
+  }
+
+  .sell-panel {
+    grid-column: 1;
+    grid-row: 3;
+  }
+
+  .buy-panel {
+    grid-column: 1;
+    grid-row: 4;
+  }
+
+  .orderbook-container {
+    grid-column: 2;
+    grid-row: 3 / 5;
+  }
+
+  .your-orders {
+    grid-column: 1 / 3;
+    grid-row: 5;
+  }
+
+  .market-name-and-stats {
+    grid-column: 1 / 3;
+    grid-row: 1;
+  }
+
+  .feedback-link {
+    display: none;
   }
 }
