--- a/lisk-dex-electron/src/SignInModal.css
+++ b/lisk-dex-electron/src/SignInModal.css
@@ -1,5 +1,6 @@
 #sign-in-modal {
     position: absolute;
+    box-sizing: border-box;
     z-index: 2;
     top: calc(50% - 316px);
     left: 25%;
@@ -7,14 +8,36 @@
     padding: 40px;
     background-color: rgb(27, 27, 27);
     height: 550px;
+    overflow-y: auto;
 }
 
-#sign-in-textarea {
-    font-size: 20px;
+.sign-in-textarea {
+    height: 46px;
     width: 100%;
+    font-size: 20px;
     background-color: rgb(36, 35, 35);
     color: white;
     font-family: 'Courier New', Courier, monospace;
     margin-top: 10px;
     margin-bottom: 8px;
+}
+
+@media only screen and (max-width: 768px) {
+  #sign-in-modal {
+    padding: 20px;
+    border: 0;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 1400px;
+  }
+
+  .sign-in-textarea {
+    height: 70px;
+  }
+
+  .generated-wallet-address {
+    display: inline-block;
+    padding-top: 10px;
+  }
 }
