--- a/lisk-dex-electron/src/SignInModal.css
+++ b/lisk-dex-electron/src/SignInModal.css
@@ -1,13 +1,13 @@
 #sign-in-modal {
-    position: absolute;
+    position: fixed;
     box-sizing: border-box;
     z-index: 2;
-    top: calc(50% - 316px);
+    top: calc(50% - 321px);
     left: 25%;
     width: 50%;
     padding: 40px;
     background-color: rgb(27, 27, 27);
-    height: 550px;
+    height: 642px;
     overflow-y: auto;
 }
 
@@ -29,7 +29,7 @@
     left: 0;
     top: 0;
     width: 100%;
-    height: 1400px;
+    height: 100%;
   }
 
   .sign-in-textarea {
