--- a/lisk-dex-electron/src/App.css
+++ b/lisk-dex-electron/src/App.css
@@ -63,7 +63,11 @@
   grid-row: 1 / 3;
 }
 
-.depth-chart {
+.price-chart {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   grid-column: 3;
   grid-row: 1 / 2;
 }
@@ -168,7 +172,7 @@
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 950px) {
   .container {
     height: 1400px;
     grid-template-columns: 50% 50%;
@@ -187,7 +191,7 @@
     height: 1400px;
   }
 
-  .depth-chart {
+  .price-chart {
     grid-column: 1 / 3;
     grid-row: 2;
   }
