--- a/lisk-dex-electron/src/SignInModal.css
+++ b/lisk-dex-electron/src/SignInModal.css
@@ -22,7 +22,7 @@
     margin-bottom: 8px;
 }
 
-@media only screen and (max-width: 950px) {
+@media only screen and (max-width: 950px), only screen and (max-height: 700px) {
   #sign-in-modal {
     padding: 20px;
     border: 0;
