--- a/lisk-dex-electron/src/App.css
+++ b/lisk-dex-electron/src/App.css
@@ -56,7 +56,7 @@
   font-weight: bold;
   color: #dd0000;
 }
-.orderbook-container {
+.order-book-container {
   display: grid;
   grid-template-rows: calc(50% - 25px) 50px calc(50% - 25px);
   grid-column: 2;
@@ -206,7 +206,7 @@
     grid-row: 4;
   }
 
-  .orderbook-container {
+  .order-book-container {
     grid-column: 2;
     grid-row: 3 / 5;
   }
