--- a/lisk-dex-electron/src/App.css
+++ b/lisk-dex-electron/src/App.css
@@ -54,7 +54,7 @@
   font-size: 22px;
   padding-left: 5px;
   font-weight: bold;
-  color: #dd0000;
+  color: #ffffff;
 }
 .order-book-container {
   display: grid;
