--- a/lisk-dex-electron/src/PlaceOrder.css
+++ b/lisk-dex-electron/src/PlaceOrder.css
@@ -62,6 +62,18 @@
   user-select: none;
 }
 
+.estimator-info-button {
+  display: inline-block;
+  vertical-align: top;
+  background: none;
+  border: 0;
+  color: #FFFFFF;
+  outline: none;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+}
+
 @media only screen and (max-width: 400px) {
   .market-limit-tabs {
     display: flex;
