--- a/lisk-dex-electron/src/OrderBook.css
+++ b/lisk-dex-electron/src/OrderBook.css
@@ -13,3 +13,13 @@
     height: 100%;
     overflow-y: scroll;
 }
+
+.emptyAsk {
+    align-items: center !important;
+    margin-top: -20px;
+}
+
+.emptyBid {
+    align-items: center !important;
+    margin-top: 20px;
+}
