--- a/lisk-dex-electron/src/App.css
+++ b/lisk-dex-electron/src/App.css
@@ -3,12 +3,21 @@
   width: 100%;
 }
 
+a {
+  color: #44AADD;
+}
+
 .container {
   display: grid;
   height: calc(100% - 50px);
   grid-template-columns: 20% 20% 45% 15%;
   grid-template-rows: 50% 50%;
   margin: 0 10px 0 10px;
+}
+
+.markets-container {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .top-bar {
