--- a/lisk-dex-electron/src/Tooltip.css
+++ b/lisk-dex-electron/src/Tooltip.css
@@ -1,13 +1,16 @@
 .tooltip {
-  position: absolute;
+  display: inline-block;
+  position: relative;
+  width: 50%;
+  vertical-align: middle;
 }
 .tooltip-trigger {
   display: inline-block;
   text-decoration: underline;
 }
 .tooltip-bubble {
-  min-width: 380px;
-  max-width: 210px;
+  width: calc(100% - 30px);
+  left: 25px;
   position: absolute;
   z-index: 10;
 }
@@ -15,53 +18,11 @@
   content: '';
   position: absolute;
 }
-.tooltip-top {
-  bottom: 100%;
-  left: 50%;
-  padding-bottom: 9px;
-  transform: translateX(-50%);
-}
-.tooltip-top::after {
-  border-left: 9px solid transparent;
-  border-right: 9px solid transparent;
-  border-top: 9px solid #fff;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-}
-.tooltip-bottom {
-  top: 100%;
-  left: 50%;
-  padding-top: 9px;
-  transform: translateX(-50%);
-}
-.tooltip-bottom::after {
-  border-left: 9px solid transparent;
-  border-right: 9px solid transparent;
-  border-bottom: 9px solid #fff;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-}
-.tooltip-left {
-  top: 50%;
-  right: 100%;
-  padding-right: 9px;
-  transform: translateY(-50%);
-}
-.tooltip-left::after {
-  border-left: 9px solid #fff;
-  border-top: 9px solid transparent;
-  border-bottom: 9px solid transparent;
-  top: 50%;
-  right: 0;
-  transform: translateY(-50%);
-}
 .tooltip-right {
   top: 50%;
-  left: 100%;
+  left: 22px;
   padding-left: 9px;
-  transform: translateY(-50%);
+  transform: translateY(-51%);
 }
 .tooltip-right::after {
   border-right: 9px solid #fff;
@@ -79,4 +40,10 @@
   line-height: 1.4;
   padding: 0.75em;
   text-align: center;
+}
+
+@media only screen and (max-width: 950px) {
+  .tooltip {
+    display: none;
+  }
 }
