--- a/lisk-dex-electron/src/App.css
+++ b/lisk-dex-electron/src/App.css
@@ -29,7 +29,6 @@ li {
   height: calc(100% - 50px);
   grid-template-columns: 20% 20% 45% 15%;
   grid-template-rows: 50% 50%;
-  margin: 0 10px 0 10px;
 }
 
 .markets-container {
@@ -51,6 +50,8 @@ li {
   grid-column: 4;
   grid-row: 1 / 3;
   background-color: #0d0e0e;
+  padding-left: 10px;
+  padding-top: 10px;
 }
 
 .buy-panel {
@@ -61,6 +62,8 @@ li {
   border-bottom: 1px dashed black;
   overflow-y: auto;
   overflow-x: hidden;
+  padding-left: 10px;
+  padding-top: 10px;
 }
 
 .sell-panel {
@@ -69,6 +72,8 @@ li {
   grid-row: 1 / 2;
   background-color: #1a1c1c;
   overflow-y: auto;
+  padding-left: 10px;
+  padding-top: 10px;
 }
 
 .sell-orders {
