--- a/lisk-dex-electron/src/App.css
+++ b/lisk-dex-electron/src/App.css
@@ -103,9 +103,9 @@ li {
 
 .your-orders {
   display: grid;
-  grid-template-rows: 40px;
+  grid-template-rows: 40px calc(100% - 40px);
   grid-column: 3;
-  grid-row: 2 / 3;
+  grid-row: 2;
   background-color: #131414;
 }
 
