--- a/lisk-dex-electron/src/App.css
+++ b/lisk-dex-electron/src/App.css
@@ -76,23 +76,38 @@ li {
   padding-top: 10px;
 }
 
+.sell-orders-title {
+  background-color: #15191a;
+  line-height: 30px;
+  text-align: center;
+}
+
 .sell-orders {
   background-color: #15191a;
 }
+
+.buy-orders-title {
+  background-color: #15191a;
+  line-height: 30px;
+  text-align: center;
+}
+
 .buy-orders {
   background-color: #15191a;
 }
+
 .price-display {
   background-color: #212424;
   line-height: 50px;
   font-size: 22px;
-  padding-left: 5px;
+  padding-left: 10px;
   font-weight: bold;
   color: #ffffff;
 }
+
 .order-book-container {
   display: grid;
-  grid-template-rows: calc(50% - 25px) 50px calc(50% - 25px);
+  grid-template-rows: 30px calc(50% - 55px) 50px calc(50% - 55px) 30px;
   grid-column: 2;
   grid-row: 1 / 3;
 }
@@ -108,10 +123,19 @@ li {
 
 .your-orders {
   display: grid;
-  grid-template-rows: 40px calc(100% - 40px);
+  grid-template-rows: 35px calc(100% - 35px);
   grid-column: 3;
   grid-row: 2;
   background-color: #131414;
+}
+
+.your-orders-header {
+  font-size: 20px;
+  color: rgb(136, 136, 141);
+  height: 35px;
+  line-height: 35px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .modal-background {
