--- a/lisk-dex-electron/src/SignInModal.css
+++ b/lisk-dex-electron/src/SignInModal.css
@@ -46,6 +46,13 @@
   margin-bottom: 50px;
 }
 
+@media only screen and (max-width: 1350px) {
+  .sign-in-heading {
+    margin-top: 15px;
+    margin-bottom: 25px;
+  }
+}
+
 @media only screen and (max-width: 950px), only screen and (max-height: 700px) {
   #sign-in-modal {
     padding: 20px;
