--- a/lisk-dex-electron/src/OrderBook.scss
+++ b/lisk-dex-electron/src/OrderBook.scss
@@ -1,3 +1,5 @@
+@import './styles/variables';
+
 .askOrderList {
   display: flex;
   align-items: flex-start;
@@ -25,7 +27,7 @@
   padding-bottom: 10px;
   width: 100%;
   text-align: center;
-  color: #999999;
+  color: $primary-bg;
 }
 
 .emptyBid {
@@ -33,5 +35,5 @@
   padding-bottom: 10px;
   width: 100%;
   text-align: center;
-  color: #999999;
+  color: $primary-bg;
 }
