--- a/lisk-dex-electron/src/SignInModal.scss
+++ b/lisk-dex-electron/src/SignInModal.scss
@@ -9,6 +9,13 @@
   background-color: rgb(27, 27, 27);
   height: 686px;
   overflow-y: auto;
+
+  .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 5px;
+    font-size: 32px;
+  }
 }
 
 .sign-in-textarea {
