--- a/lisk-dex-electron/src/SignInModal.scss
+++ b/lisk-dex-electron/src/SignInModal.scss
@@ -1,20 +1,28 @@
+@import './styles/variables';
+
 #sign-in-modal {
-  position: fixed;
+  margin: auto;
   box-sizing: border-box;
   z-index: 200;
-  top: calc(50% - 343px);
-  left: 25%;
   width: 50%;
-  padding: 40px;
+  padding: 30px;
   background-color: rgb(27, 27, 27);
-  height: 686px;
+  height: 75%;
   overflow-y: auto;
+  border: 1px solid $primary-bg;
 
-  .close-btn {
-    position: absolute;
-    top: 10px;
-    right: 5px;
-    font-size: 32px;
+  .button-wrapper {
+    position: relative;
+    .close-btn {
+      position: absolute;
+      top: -20px;
+      right: -20px;
+      font-size: 32px;
+    }
+  }
+
+  .sign-in-heading {
+    margin-top: 0;
   }
 }
 
@@ -48,18 +56,6 @@
   left: 5%;
 }
 
-.sign-in-heading {
-  margin-top: -26px;
-  margin-bottom: 50px;
-}
-
-@media only screen and (max-width: 1350px) {
-  .sign-in-heading {
-    margin-top: 15px;
-    margin-bottom: 25px;
-  }
-}
-
 @media only screen and (max-width: 950px), only screen and (max-height: 700px) {
   #sign-in-modal {
     padding: 20px;
@@ -68,11 +64,6 @@
     top: 0;
     width: 100%;
     height: 100%;
-  }
-
-  .sign-in-heading {
-    margin-top: 15px;
-    margin-bottom: 25px;
   }
 
   .sign-in-textarea {
