--- a/lisk-dex-electron/src/progress.scss
+++ b/lisk-dex-electron/src/progress.scss
@@ -9,6 +9,7 @@
   background-clip: padding-box;
   margin: 0.5rem 0 1rem 0;
   overflow: hidden;
+  border-radius: 0;
 }
 
 .progress .determinate {
