--- a/lisk-dex-electron/src/OrderBook.css
+++ b/lisk-dex-electron/src/OrderBook.css
@@ -1,5 +1,3 @@
-@import './styles/variables';
-
 .askOrderList {
   display: flex;
   align-items: flex-start;
@@ -27,7 +25,7 @@
   padding-bottom: 10px;
   width: 100%;
   text-align: center;
-  color: $primary-bg;
+  color: #999999;
 }
 
 .emptyBid {
@@ -35,5 +33,5 @@
   padding-bottom: 10px;
   width: 100%;
   text-align: center;
-  color: $primary-bg;
+  color: #999999;
 }
