--- a/lisk-dex-electron/src/PlaceOrder.css
+++ b/lisk-dex-electron/src/PlaceOrder.css
@@ -1,5 +1,3 @@
-@import './styles/variables';
-
 .action-name {
   display: inline-block;
   font-size: 20px;
@@ -30,7 +28,7 @@
   outline: none;
   width: 105px;
   vertical-align: top;
-  background: $primary;
+  background: #008800;
 }
 
 .place-buy-order-button[disabled] {
@@ -61,7 +59,7 @@
   position: absolute;
   right: 10%;
   top: calc(50% - 11px);
-  color: $primary-bg;
+  color: #999999;
   user-select: none;
 }
 
