--- a/lisk-dex-electron/src/SignInModal.css
+++ b/lisk-dex-electron/src/SignInModal.css
@@ -1,5 +1,3 @@
-@import './styles/variables';
-
 #sign-in-modal {
   margin: auto;
   box-sizing: border-box;
@@ -8,35 +6,35 @@
   background-color: rgb(27, 27, 27);
   height: 75%;
   overflow-y: auto;
-  border: 1px solid $primary-bg;
-
-  .wrapper {
-    position: relative;
-    .close-btn {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      font-size: 32px;
-    }
-
-    .form {
-      padding: 30px;
-    }
-
-    .sign-in-progress-area {
-      position: absolute;
-      top: -8px;
-      height: 20px;
-      width: 100%;
-      // left: 5%;
-    }
-  }
-
-  .sign-in-heading {
-    margin-top: 0;
-  }
+  border: 1px solid #999999;
 }
 
+.sign-in-heading {
+  margin-top: 0;
+}
+
+.wrapper {
+  position: relative;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 32px;
+}
+
+.form {
+  padding: 30px;
+}
+
+.sign-in-progress-area {
+  position: absolute;
+  top: -8px;
+  height: 20px;
+  width: 100%;
+  /* left: 5%; */
+}
 .sign-in-textarea {
   height: 46px;
   width: 100%;
@@ -68,14 +66,13 @@
     width: 100%;
     height: 100%;
 
-    .button-wrapper {
-      .close-btn {
-        position: absolute;
-        top: 0px;
-        right: 0px;
-        font-size: 32px;
-      }
-    }
+  }
+
+  .close-btn {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    font-size: 32px;
   }
 
   .sign-in-textarea {
