--- a/lisk-dex-electron/src/App.css
+++ b/lisk-dex-electron/src/App.css
@@ -1,5 +1,3 @@
-@import './styles/variables';
-
 #root {
   height: 100%;
   width: 100%;
@@ -154,18 +152,17 @@ li {
   width: 100%;
   height: 100%;
   opacity: 0.6;
-  background: $secondary-bg;
+  background: #000000;
 }
 
 .modal-foreground {
   position: absolute;
   display: flex;
-  // position: fixed;
   justify-content: center;
   align-content: center;
   width: 100vw;
   height: 100vh;
-  z-index: 111; // This is because of the chart in the background
+  z-index: 111; /* This is because of the chart in the background */
   opacity: 1;
 }
 
@@ -176,7 +173,7 @@ li {
   border: 0;
   padding: 5px 15px 5px 15px;
   outline: none;
-  background: $primary;
+  background: #008800;
 }
 
 .button-secondary {
@@ -186,34 +183,34 @@ li {
   border: 0;
   padding: 5px 15px 5px 15px;
   outline: none;
-  background: $secondary;
+  background: #555555;
 }
 
 .tab-button {
   cursor: pointer;
   font-size: 20px;
-  color: $secondary-bg;
+  color: #000000;
   border: 0;
   padding: 5px 15px 5px 15px;
   outline: none;
-  background: $primary-bg;
+  background: #999999;
 }
 
 .tab-button:disabled {
   cursor: default;
   font-size: 20px;
-  color: $secondary-bg;
+  color: #000000;
   border: 0;
   padding: 5px 15px 5px 15px;
   outline: none;
-  background: $disabled-bg;
+  background: #dddddd;
 }
 
 .error-message {
   font-size: 14px;
   margin-top: 4px;
   margin-bottom: 2px;
-  color: $error;
+  color: #cc0000;
 }
 
 .lds-dual-ring {
