--- a/lisk-dex-electron/src/App.css
+++ b/lisk-dex-electron/src/App.css
@@ -160,8 +160,8 @@ li {
   display: flex;
   justify-content: center;
   align-content: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 111; /* This is because of the chart in the background */
   opacity: 1;
 }
