--- a/lisk-dex-electron/src/Modal.css
+++ b/lisk-dex-electron/src/Modal.css
@@ -20,7 +20,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba(0,0,0,.6);
+  background: rgba(0, 0, 0, 0.6);
   z-index: 1040;
   display: none;
 }
@@ -46,11 +46,13 @@
   display: block;
 }
 
-.modal-close-button {
-  display: none;
+.modal-close-btn {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  color: #FFF;
+  top: -40px;
+  right: 0;
+  font-size: 32px;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 1600px) {
@@ -72,11 +74,15 @@
     transform: none;
   }
 
-  .modal-close-button {
-    display: block;
+  .modal-close-btn {
+    position: absolute;
+    color: #000;
+    top: 10px;
+    right: 14px;
+    font-size: 32px;
+    cursor: pointer;
   }
 }
-
 
 .modal-header {
   margin-top: 4px;
