Max height for modal window

--- a/lisk-dex-electron/src/Modal.css
+++ b/lisk-dex-electron/src/Modal.css
@@ -32,6 +32,8 @@
 .modal-container {
   z-index: 1050;
   position: fixed;
+  max-height: 650px;
+  overflow-y: auto;
   border: 1px solid lightgray;
   border-radius: 6px;
   background: white;
@@ -71,6 +73,8 @@
     left: 0;
     border-radius: 0;
     overflow: auto;
+    overflow-y: auto;
+    max-height: none;
     transform: none;
   }
 
