--- a/lisk-dex-electron/src/App.css
+++ b/lisk-dex-electron/src/App.css
@@ -22,6 +22,7 @@ li {
   width: 105px;
   vertical-align: top;
   background: #880000;
+  border-radius: 5px;
 }
 
 .container {
@@ -174,6 +175,7 @@ li {
   padding: 5px 15px 5px 15px;
   outline: none;
   background: #008800;
+  border-radius: 5px;
 }
 
 .button-primary:disabled {
@@ -189,6 +191,7 @@ li {
   padding: 5px 15px 5px 15px;
   outline: none;
   background: #555555;
+  border-radius: 5px;
 }
 
 .tab-button {
@@ -199,6 +202,14 @@ li {
   padding: 5px 15px 5px 15px;
   outline: none;
   background: #999999;
+}
+
+.tab-button.first {
+  border-radius: 5px 0px 0px 5px;
+}
+
+.tab-button.last {
+  border-radius: 0px 5px 5px 0px;
 }
 
 .tab-button:disabled {
